--- a/AntiCapcha/MainWindow.xaml
+++ b/AntiCapcha/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="AntiCapcha.MainWindow"
+﻿<Window x:Class="AntiCaptcha.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AntiCapcha"
+        xmlns:local="clr-namespace:AntiCaptcha"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
