--- a/AntiCapcha/App.xaml
+++ b/AntiCapcha/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="AntiCapcha.App"
+﻿<Application x:Class="AntiCaptcha.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:AntiCapcha"
+             xmlns:local="clr-namespace:AntiCaptcha"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
