--- a/AntiCapcha/Window1.xaml
+++ b/AntiCapcha/Window1.xaml
@@ -1,9 +1,9 @@
-<Window x:Class="AntiCapcha.Window1"
+<Window x:Class="AntiCaptcha.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:AntiCapcha"
+        xmlns:local="clr-namespace:AntiCaptcha"
         mc:Ignorable="d"
         Title="Window1" Height="450" Width="800">
     <Grid>
